--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Dropzone CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.3/dropzone.min.css">
     <!-- Link to your custom CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <div id="root">
@@ -132,6 +132,6 @@ Avoid:
     <!-- Dropzone JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.9.3/dropzone.min.js"></script>
     <!-- Link to your custom JavaScript -->
-    <script src="script.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 </html>
