--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SRT Translator (Gemini)</title>
+    <title>Subtitle Translator</title>
     <!-- Font Awesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Dropzone CSS -->
@@ -15,7 +15,7 @@
     <div class="container">
         <!-- Header with controls -->
         <div class="top-bar">
-             <h1 id="page-title">SRT Translator</h1>
+             <h1 id="page-title">Subtitle Translator</h1>
              <div class="controls">
                  <button id="languageToggle" class="control-btn" aria-label="Toggle language" title="Toggle language (English/Persian)">
                      <i class="fas fa-language"></i>
