--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                     <div class="form-group">
                          <label id="model-label" class="form-label" for="model">Gemini Model:</label>
                          <select id="model" name="model">
+                            <option value="gemini-2.5-flash-preview-04-17">Gemini 2.5 Flash</option>
                             <option value="gemini-2.0-flash" selected>Gemini 2.0 Flash</option>
                             <option value="gemini-2.0-flash-lite">Gemini 2.0 Flash-Lite</option>
                             <option value="gemini-2.5-pro-preview-03-25">Gemini 2.5 Pro</option>
