--- a/index.html
+++ b/index.html
@@ -227,6 +227,10 @@
         <p>ساخته شده با ❤️ توسط <a href="https://x.com/yebekhe" target="_blank" rel="noopener noreferrer">yebekhe</a></p>
         <!-- English version (will be swapped by JS) -->
         <p style="display: none;">Created with ❤️ by <a href="https://x.com/yebekhe" target="_blank" rel="noopener noreferrer">yebekhe</a></p>
+
+        <a href="https://nowpayments.io/donation/yebekhe" target="_blank" rel="noreferrer noopener">
+            <img src="https://nowpayments.io/images/embeds/donation-button-white.svg" alt="Cryptocurrency & Bitcoin donation button by NOWPayments">
+        </a>
     </footer>
 
     <!-- Dropzone JS -->
