--- a/index.html
+++ b/index.html
@@ -228,9 +228,13 @@
         <!-- English version (will be swapped by JS) -->
         <p style="display: none;">Created with ❤️ by <a href="https://x.com/yebekhe" target="_blank" rel="noopener noreferrer">yebekhe</a></p>
 
-        <a href="https://nowpayments.io/donation/yebekhe" target="_blank" rel="noreferrer noopener">
-            <img src="https://nowpayments.io/images/embeds/donation-button-white.svg" alt="Cryptocurrency & Bitcoin donation button by NOWPayments">
-        </a>
+        <div class="donate-section">
+            <!-- *** IMPORTANT: Replace YOUR_CRYPTO_GATEWAY_URL_HERE with your actual payment link *** -->
+            <a href="https://nowpayments.io/donation/yebekhe" target="_blank" rel="noopener noreferrer" class="donate-button" id="donateButton">
+                <!-- Text will be set by JS -->
+            </a>
+             <!-- *** END IMPORTANT *** -->
+        </div>
     </footer>
 
     <!-- Dropzone JS -->
