--- a/index.html
+++ b/index.html
@@ -229,11 +229,9 @@
         <p style="display: none;">Created with ❤️ by <a href="https://x.com/yebekhe" target="_blank" rel="noopener noreferrer">yebekhe</a></p>
 
         <div class="donate-section">
-            <!-- *** IMPORTANT: Replace YOUR_CRYPTO_GATEWAY_URL_HERE with your actual payment link *** -->
-            <a href="https://nowpayments.io/donation/yebekhe" target="_blank" rel="noopener noreferrer" class="donate-button" id="donateButton">
+            <a href="https://plisio.net/donate/9mF8kcrb" target="_blank" rel="noopener noreferrer" class="donate-button" id="donateButton">
                 <!-- Text will be set by JS -->
             </a>
-             <!-- *** END IMPORTANT *** -->
         </div>
     </footer>
 
