--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                 <i class="fas fa-cloud-upload-alt text-5xl text-gray-400 mb-4"></i>
                                 <p class="text-lg font-medium">Drag & drop SRT, VTT, SSA, or ASS file</p>
                                 <p class="text-sm text-gray-500 dark:text-gray-400 mb-4">or</p>
-                                <div class="inline-block px-4 py-2 bg-primary-600 text-white rounded-lg hover:bg-primary-700 cursor-pointer">Choose File</div>
+                                <div id="choose-file-btn" class="inline-block px-4 py-2 bg-primary-600 text-white rounded-lg hover:bg-primary-700 cursor-pointer">Choose File</div>
                             </div>
                             <div id="file-feedback" class="mt-4 text-center" style="display: none;">
                                 <p class="text-green-600 dark:text-green-400 font-medium"><i class="fas fa-check-circle mr-2"></i>File selected: <span id="file-name" class="font-bold"></span></p>
