--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full">
+<html lang="en" class="h-full dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -79,7 +79,6 @@
                     <div class="flex items-center space-x-2">
                         <button id="languageToggle" class="p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors group" title="Toggle language (English/Persian)"><i class="fas fa-language text-gray-600 dark:text-gray-300 group-hover:text-primary-600"></i></button>
                         <button id="clear-memory-button" class="p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors group" title="Clear translation memory"><i class="fas fa-trash text-gray-600 dark:text-gray-300 group-hover:text-red-600"></i></button>
-                        <button id="themeToggle" class="p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors group" title="Toggle light/dark theme"><i class="fas fa-moon text-gray-600 dark:text-gray-300 group-hover:text-yellow-500"></i></button>
                     </div>
                 </div>
             </div>
